trigger: new deployment with fixed NEXTAUTH_URL
- Updated Vercel environment variables with correct NEXTAUTH_URL
- This should resolve the authentication issues in production
- Testing deployment with proper configuration

--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
+    "postinstall": "prisma generate",
+    "verify:prisma": "node scripts/verify-prisma.js",
     "predeploy": "npm run lint && npm run build",
     "deploy:monitor": "vercel logs --limit=50 --follow",
     "deploy:status": "vercel list",
