--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
   "buildCommand": "npm run build",
   "framework": "nextjs",
+  "installCommand": "npm ci && prisma generate",
+  "functions": {
+    "src/app/api/**/route.ts": {
+      "maxDuration": 10
+    }
+  },
   "rewrites": [
     {
       "source": "/(.*)",
