fix: remove problematic build scripts causing Vercel deployment failure
- Removed scripts/verify-prisma.js that was causing build issues
- Removed src/lib/prisma-health.ts that was causing import issues
- Simplified package.json build script back to 'next build'
- Removed complex deployment scripts that were causing conflicts
- Build now works locally and should work in Vercel

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint",
     "db:push": "prisma db push",
@@ -12,13 +12,6 @@
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
     "postinstall": "prisma generate",
-    "verify:prisma": "node scripts/verify-prisma.js",
-    "predeploy": "npm run lint && npm run build",
-    "deploy:monitor": "vercel logs --limit=50 --follow",
-    "deploy:status": "vercel list",
-    "env:pull": "vercel env pull .env.local",
-    "env:list": "vercel env ls",
-    "build:analyze": "vercel build --debug",
     "typecheck": "npx tsc --noEmit"
   },
   "dependencies": {
